base styles for header, footer, content

--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 ---
 layout: default
 title: Rize Digital
-description: Uplifting communities through technology
+subtitle: Uplifting communities through technology
+description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
 ---
+<!-- Hero -->
+{% include hero.html %}
 
-<h1>Welcome to Rize Digital</h1>
-<h2>Uplifting communities through technology</h2>
+
+<!-- Section -->
+
+
+<!-- Section -->
+
+
+<!-- Section -->
+
+
+<!-- CTA Section -->
