--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: About
-permalink: /about/
+title: Services
+permalink: /services/
 ---
 <!-- Hero -->
 {% include hero.html %}
