hero styles and text adjustments

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 title: Rize Digital
-subtitle: Uplifting communities through technology
+hero-title: Together We Rize
+hero-subtitle: Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive.
 description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
+hero-image: /assets/images/pages/home/hero-home.jpg
 ---
 <!-- Hero -->
 {% include hero.html %}
