--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 title: Rize Digital
+description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
 hero-title: Together We Rize
 hero-subtitle: Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive.
-description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
 hero-image: /assets/images/pages/home/hero-home.jpg
+hero-cta-text: Get In Touch
+hero-cta-url: /contact
 ---
 <!-- Hero -->
 {% include hero.html %}
