--- a/index.html
+++ b/index.html
@@ -15,8 +15,96 @@ hero-cta-url: /contact
 <!-- Section -->
 
 
-<!-- Section -->
+<!-- Section - What We Do -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>What We Do</h2>
+      <p>We offer support where you need it most—always guided by care, clarity, and community.</p>
+    </div>
+    <div class="bento-grid grid-2">
+      <div class="bento-item">
+        <div class="bento-content">
+          <div class="text-container">
+            <h3 class="bento-title">Establish Your Digital Presence</h3>
+            <p class="bento-description">Your website and online presence are often the first way people connect with you. We help you build inclusive, easy-to-manage sites, storefronts, and campaigns that reflect your mission and values.</p>
 
+            <h4>We help with:</h4>
+            <ul>
+              <li>Web development (WordPress, Shopify)</li>
+              <li>Branding</li>
+              <li>Accessible design</li>
+              <li>Digital storytelling</li>
+            </ul>
+          </div>
+          <div class="graphic-container">
+            <img src="/assets/images/pages/home/placeholder.jpg" alt="Digital Presence" class="bento-image" />
+          </div>
+        </div>
+      </div>
+
+      <div class="bento-item">
+        <div class="bento-content">
+          <div class="graphic-container">
+            <img src="/assets/images/pages/home/placeholder.jpg" alt="Planning with Purpose" class="bento-image" />
+          </div>
+          <div class="text-container">
+            <h3 class="bento-title">Plan with Purpose</h3>
+            <p class="bento-description">Your message matters. We support you with marketing strategy and content planning that actually makes sense for your goals.</p>
+            <h4>We help with:</h4>
+            <ul>
+              <li>Email Marketing</li>
+              <li>Social Media</li>
+              <li>SEO</li>
+              <li>Local Listings</li>
+              <li>Data-informed strategy</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="bento-item">
+        <div class="bento-content">
+          <div class="text-container">
+            <h3 class="bento-title">Empower Your Team</h3>
+            <p class="bento-description">The right tools can make internal communication, collaboration, and workflows smoother for your team. We guide you through setup, training, and long-term support.</p>
+            <h4>We help with:</h4>
+            <ul>
+              <li>Google Workspace</li>
+              <li>Slack</li>
+              <li>Microsoft Teams</li>
+              <li>Task management tools</li>
+              <li>Custom documentation</li>
+            </ul>
+          </div>
+          <div class="graphic-container">
+            <img src="/assets/images/pages/home/placeholder.jpg" alt="Team Empowerment" class="bento-image" />
+          </div>
+        </div>
+      </div>
+
+      <div class="bento-item">
+        <div class="bento-content">
+          <div class="graphic-container">
+            <img src="/assets/images/pages/home/placeholder.jpg" alt="Digital Navigation" class="bento-image" />
+          </div>
+          <div class="text-container">
+            <h3 class="bento-title">Navigate the Digital World</h3>
+            <p class="bento-description">We offer workshops and training for people at any digital skill level—from elders learning online safety to youth exploring career paths.</p>
+            <h4>We help with:</h4>
+            <ul>
+              <li>Community Workshops</li>
+              <li>Courses</li>
+              <li>SEO</li>
+              <li>Local Listings</li>
+              <li>Data-informed strategy</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Section -->
 
