--- a/index.html
+++ b/index.html
@@ -22,23 +22,80 @@ hero-cta-url: /contact
       <h2>What We Do</h2>
       <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p>
     </div>
-    <div class="bento-grid bento-grid--feature">
-      <div class="bento-section">
-        <h3>Community Partnerships</h3>
-        <p class="bento-description">
-          We partner with communities and create aligned programming and events that amplify the voices, experiences, and excellence of Native and Indigenous populations throughout the world.
-        </p>
-        <a href="#" class="button">Learn More</a>
+    <div class="bento-container">
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section">
+          <h3>Establish Your Digital Presence
+          </h3>
+          <p class="bento-description">
+            Your website and online presence are often the first way people connect with you. We help you build inclusive, easy-to-manage sites, storefronts, and campaigns that reflect your mission and values.
+            We help with: Web development (WordPress, Shopify), branding, accessible design, and digital storytelling.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/placeholder.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
       </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/placeholder.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>Plan with Purpose
+          </h3>
+          <p class="bento-description">
+            Your message matters. We support you with marketing strategy and content planning that actually makes sense for your goals.
+            We help with: Email, social media, SEO, local listings, analytics, and data-informed decision making.
 
-      <div class="bento-section bento-image-wrapper">
-        <img
-          src="/assets/images/pages/home/placeholder.jpg"
-          alt="Community Partnerships"
-          class="bento-image" />
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section">
+          <h3>Empower Your Team
+          </h3>
+          <p class="bento-description">
+            The right tools can make internal communication, collaboration, and workflows smoother for your team. We guide you through setup, training, and long-term support.
+            We help with: Google Workspace, Slack, Microsoft Teams, Notion, project tools, and custom documentation.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/placeholder.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/placeholder.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>Navigate the Digital World
+          </h3>
+          <p class="bento-description">
+            We offer workshops and training for people at any digital skill level—from elders learning online safety to youth exploring career paths.
+            We help with: Community workshops, courses, safety education, and professional development.
+
+          </p>
+          <a href="/services" class="button">Explore Our Services</a>
+        </div>
+
       </div>
     </div>
-
   </div>
 </section>
 
