--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@ hero-cta-url: /contact
 {% include hero.html %}
 
 
-<!-- Section -->
+<!-- Section - Our Value -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>Our Value to You</h2>
+      <p class="subtitle">
+        You’re doing important work—serving your community, telling your story, organizing change. We’re here to make the digital side of that work easier, more effective, and more empowering.
+      </p>
+    </div>
 
+  </div>
+</section>
 
 <!-- Section - What We Do -->
 <section>
@@ -99,7 +109,19 @@ hero-cta-url: /contact
   </div>
 </section>
 
-<!-- Section -->
+<!-- Section CTA -->
+<section class="cta-section">
+  <div class="container">
+    <div class="cta-body bento-grid">
+      <div class="">
+        <h3>We meet you where you are, and grow with you from there.</h3>
+        <div class="button-container">
+          <a href="/services" class="button">Learn More About Our Services</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!-- CTA Section -->
