adds tiles and inline CTA styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,49 @@ hero-cta-url: /contact
         You’re doing important work—serving your community, telling your story, organizing change. We’re here to make the digital side of that work easier, more effective, and more empowering.
       </p>
     </div>
+  </div>
+</section>
 
+
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>Who We Serve</h2>
+      <p class="subtitle">
+        We partner with changemakers of all kinds:
+      </p>
+    </div>
+
+    <div class="bento-container">
+      <ul class="bento-grid bento-grid--three-col tile-grid">
+        <li class="bento-section">
+          Nonprofits & Community Groups
+        </li>
+        <li class="bento-section">
+          Artists & Cultural Leaders
+        </li>
+        <li class="bento-section">
+          Entrepreneurs
+        </li>
+        <li class="bento-section">
+          Educational Organizations
+        </li>
+        <li class="bento-section">
+          Social Enterprises
+        </li>
+        <li class="bento-section">
+          Families, Youth, & Elders
+        </li>
+      </ul>
+      <div class="inline-cta">
+        <p>
+          We believe in building long-term relationships with the people and organizations we serve.
+        </p>
+        <div class="button-container">
+          <a href="/about" class="button button-alt">Learn More About Our Values</a>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
@@ -114,9 +156,10 @@ hero-cta-url: /contact
   <div class="container">
     <div class="cta-body bento-grid">
       <div class="">
-        <h3>We meet you where you are, and grow with you from there.</h3>
+        <h3>Let’s Work Together!</h3>
+        <p>Have a project in mind? Curious how we can help? Fill out our form to get started.</p>
         <div class="button-container">
-          <a href="/services" class="button">Learn More About Our Services</a>
+          <a href="/contact" class="button">Start a Conversation</a>
         </div>
       </div>
     </div>
