adds about content

--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: About
+hero-title: Who We Are
+hero-subtitle: This is our story
 permalink: /about/
 ---
 <!-- Hero -->
@@ -8,6 +10,32 @@ permalink: /about/
 
 <!-- Section -->
 
+<section>
+  <div class="container">
+    <div>
+      <div class="text-container">
+        <h2>Our Mission</h2>
+        <p class="subtitle">We are entering a new digital era and everyone deserves a place in it. Rize Digital helps communities rise by building the skills, tools, and confidence needed to thrive online.</p>
+        <p>Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.</p>
+        <p>Together, we’re building a future where everyone can rise.</p>
+      </div>
+      <div class="">
+        <img src="/assets/images/pages/home/placeholder.jpg" alt="Rize Digital" />
+      </div>
+    </div>
+    <div>
+      <div class="">
+        <img src="/assets/images/pages/home/placeholder.jpg" alt="Rize Digital" />
+      </div>
+      <div class="text-container">
+        <h2>The Vision</h2>
+        <p class="subtitle">
+          We imagine a future where access to digital tools, knowledge, and opportunity is universal—where communities can thrive, connect, and lead in the digital world. Rize Digital exists to help build that future—one website, one workshop, one empowered client at a time.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Section -->
 
