Adds images to homepage and content to about page

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ permalink: /about/
     </div>
     <div>
       <div class="">
-        <img src="/assets/images/pages/home/placeholder.jpg" alt="Rize Digital" />
+        <img src="/assets/images/pages/about/vision.jpg" alt="Rize Digital" />
       </div>
       <div class="text-container">
         <h2>The Vision</h2>
@@ -37,10 +37,95 @@ permalink: /about/
   </div>
 </section>
 
-<!-- Section -->
+<!-- Section - Values -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>Our Values</h2>
+      <!-- <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p> -->
+    </div>
+    <div class="bento-container">
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/navigate-digital.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>🌾 Community Rooted</h3>
+          <p class="bento-description">
+            We don’t just work in communities—we work with them. Our approach is grounded in listening, learning, and building relationships. By staying culturally informed and people-centered, we create digital solutions that reflect the strengths, voices, and values of the communities we serve. </p>
+          <a href="/services" class="button">Explore Our Services</a>
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section">
+          <h3>🌱 Empowerment Through Education</h3>
+          <p class="bento-description">
+            We believe that knowledge should be shared, not gatekept. Whether through workshops, one-on-one support, or clear documentation, we help clients build skills and confidence that last.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/digital-presence.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/plan-purpose.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>🌿 Technology for Good</h3>
+          <p class="bento-description">
+            We use digital tools to uplift—not extract. Our approach is grounded in digital sovereignty, safe and healthy online spaces, real-world wellbeing, and sustainability to build a better future for communities and the planet.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section">
+          <h3>🚀 Innovation with Intention</h3>
+          <p class="bento-description">
+            We believe in using the right tools—not just the newest ones. Our choices are driven by your goals, not trends or hype. Whether it’s a simple website or a custom solution, we make sure the technology fits your needs and helps you do what you do best.
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/empower-your-team.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+      </div>
 
+    </div>
+  </div>
+</section>
 
-<!-- Section -->
-
+<!-- Section Bio -->
+<section>
+  <div class="container">
+    <div class="graphic-container">
+      <img src="/assets/images/pages/about/max-thinks.jpg" />
+    </div>
+    <div class="text-container">
+      <h2>Your Digital Partner</h2>
+      <p>I’m Max Harris — a web developer, educator, and community-minded technologist based in Vancouver. After more than a decade working in fast-paced startups and marketing teams, I made a conscious decision: to use my skills to serve the communities that matter most to me.</p>
+      <p>That’s what Rize Digital is all about.</p>
+      <p>As a Black technologist with deep ties to Indigenous communities through my family, I understand that access to digital tools and knowledge isn’t equal — but it should be. I’ve taught web development to learners from all walks of life, built accessible websites for nonprofits, and helped entrepreneurs bring their ideas online with confidence.
+        Now, I’m bringing that experience to Rize Digital — to support small businesses, non-profits, and community organizations through thoughtful web development, culturally-informed digital strategy, and hands-on education.
+        Whether you need a website, a workshop, or a roadmap for digital transformation, I’m here to build with you — not just for you.
+        Let’s rise together.
+      </p>
+    </div>
+  </div>
+</section>
 
 <!-- CTA Section -->
