--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@ hero-cta-url: /contact
     </div>
     <div class="bento-container">
       <div class="bento-grid bento-grid--feature">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/home/navigate-digital.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>Navigate the Digital World
+          </h3>
+          <p class="bento-description">
+            We offer workshops and training for people at any digital skill level—from elders learning online safety to youth exploring career paths.
+          </p>
+          <a href="/services" class="button">Explore Our Services</a>
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
         <div class="bento-section">
           <h3>Establish Your Digital Presence
           </h3>
@@ -86,7 +102,7 @@ hero-cta-url: /contact
         </div>
         <div class="bento-section bento-image-wrapper">
           <img
-            src="/assets/images/pages/home/placeholder.jpg"
+            src="/assets/images/pages/home/digital-presence.jpg"
             alt="Community Partnerships"
             class="bento-image" />
         </div>
@@ -94,7 +110,7 @@ hero-cta-url: /contact
       <div class="bento-grid bento-grid--feature">
         <div class="bento-section bento-image-wrapper">
           <img
-            src="/assets/images/pages/home/placeholder.jpg"
+            src="/assets/images/pages/home/plan-purpose.jpg"
             alt="Community Partnerships"
             class="bento-image" />
         </div>
@@ -109,38 +125,20 @@ hero-cta-url: /contact
       </div>
       <div class="bento-grid bento-grid--feature">
         <div class="bento-section">
-          <h3>Empower Your Team
-          </h3>
+          <h3>Empower Your Team</h3>
           <p class="bento-description">
             The right tools can make internal communication, collaboration, and workflows smoother for your team. We guide you through setup, training, and long-term support.
           </p>
           <a href="#" class="button">Learn More</a>
         </div>
-
         <div class="bento-section bento-image-wrapper">
           <img
-            src="/assets/images/pages/home/placeholder.jpg"
+            src="/assets/images/pages/home/empower-your-team.jpg"
             alt="Community Partnerships"
             class="bento-image" />
         </div>
       </div>
-      <div class="bento-grid bento-grid--feature">
-        <div class="bento-section bento-image-wrapper">
-          <img
-            src="/assets/images/pages/home/placeholder.jpg"
-            alt="Community Partnerships"
-            class="bento-image" />
-        </div>
-        <div class="bento-section">
-          <h3>Navigate the Digital World
-          </h3>
-          <p class="bento-description">
-            We offer workshops and training for people at any digital skill level—from elders learning online safety to youth exploring career paths.
-          </p>
-          <a href="/services" class="button">Explore Our Services</a>
-        </div>
 
-      </div>
     </div>
   </div>
 </section>
