adds 2/3 image ratio and greyscale

--- a/about.html
+++ b/about.html
@@ -104,7 +104,6 @@ permalink: /about/
             class="bento-image" />
         </div>
       </div>
-
     </div>
   </div>
 </section>
@@ -112,18 +111,20 @@ permalink: /about/
 <!-- Section Bio -->
 <section>
   <div class="container">
-    <div class="graphic-container">
-      <img src="/assets/images/pages/about/max-thinks.jpg" />
-    </div>
-    <div class="text-container">
-      <h2>Your Digital Partner</h2>
-      <p>I’m Max Harris — a web developer, educator, and community-minded technologist based in Vancouver. After more than a decade working in fast-paced startups and marketing teams, I made a conscious decision: to use my skills to serve the communities that matter most to me.</p>
-      <p>That’s what Rize Digital is all about.</p>
-      <p>As a Black technologist with deep ties to Indigenous communities through my family, I understand that access to digital tools and knowledge isn’t equal — but it should be. I’ve taught web development to learners from all walks of life, built accessible websites for nonprofits, and helped entrepreneurs bring their ideas online with confidence.
-        Now, I’m bringing that experience to Rize Digital — to support small businesses, non-profits, and community organizations through thoughtful web development, culturally-informed digital strategy, and hands-on education.
-        Whether you need a website, a workshop, or a roadmap for digital transformation, I’m here to build with you — not just for you.
-        Let’s rise together.
-      </p>
+    <div class="bento-grid bento-grid--feature">
+      <div class="bento-section bento-image-wrapper">
+        <img src="/assets/images/pages/about/max-thinks.jpg" class="bento-image" />
+      </div>
+      <div class="bento-section">
+        <h2>Your Digital Partner</h2>
+        <p>I’m Max Harris — a web developer, educator, and community-minded technologist based in Vancouver. After more than a decade working in fast-paced startups and marketing teams, I made a conscious decision: to use my skills to serve the communities that matter most to me.</p>
+        <p>That’s what Rize Digital is all about.</p>
+        <p>As a Black technologist with deep ties to Indigenous communities through my family, I understand that access to digital tools and knowledge isn’t equal — but it should be. I’ve taught web development to learners from all walks of life, built accessible websites for nonprofits, and helped entrepreneurs bring their ideas online with confidence.</p>
+        <p>Now, I’m bringing that experience to Rize Digital — to support small businesses, non-profits, and community organizations through thoughtful web development, culturally-informed digital strategy, and hands-on education.
+          Whether you need a website, a workshop, or a roadmap for digital transformation, I’m here to build with you — not just for you.
+          Let’s rise together.
+        </p>
+      </div>
     </div>
   </div>
 </section>
