--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ hero-cta-url: /contact
       <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p>
     </div>
     <div class="bento-container">
-      <div class="bento-grid bento-grid--feature">
+      <div class="bento-grid bento-grid--feature image-first">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/navigate-digital.jpg"
@@ -107,7 +107,7 @@ hero-cta-url: /contact
             class="bento-image" />
         </div>
       </div>
-      <div class="bento-grid bento-grid--feature">
+      <div class="bento-grid bento-grid--feature image-first">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/plan-purpose.jpg"
