--- a/rize.html
+++ b/rize.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: About
+title: Rize
 hero-title: Who We Are
 hero-subtitle: This is our story
-permalink: /about/
+permalink: /rize/
 ---
 <!-- Hero -->
 {% include hero.html %}
@@ -130,3 +130,9 @@ permalink: /about/
 </section>
 
 <!-- CTA Section -->
+{% include cta.html
+title="Let’s start with a conversation"
+text="Have a project in mind? Curious how we might work together? Tell us what you’re thinking — we’ll follow up with next steps, resources, or a consultation."
+button_text="Start a Conversation"
+link="/contact?type=build"
+%}
