Adds build page

--- a/build.html
+++ b/build.html
@@ -1,20 +1,135 @@
 ---
 layout: default
 title: Build
-hero-title: Build
 permalink: /build/
 ---
 <!-- Hero -->
-{% include hero.html %}
+{% include hero.html
+title="Build"
+subtitle="Your website is often the first place people connect with your work."
+%}
 
 <!-- Section -->
-
+<section>
+  <div class="container">
+    <p>
+      Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
+    </p>
+    <p>
+      We don’t just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
+    </p>
+  </div>
+</section>
 
 <!-- Section -->
-
+<!-- Section - What We Do -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>What We Build</h2>
+      <p class="subtitle">
+        Whether you’re a nonprofit, a small business, or a community-led project, we’ll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
+      </p>
+      <p>
+        We don’t just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
+      </p>
+    </div>
+    <div class="bento-container">
+      <div class="bento-grid bento-grid--feature image-first">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/build/digital-presence.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>🌍 Custom Websites</h3>
+          <p class="bento-description">
+            Responsive, accessible websites for nonprofits, community organizations, Indigenous businesses, and purpose-driven entrepreneurs.
+          </p>
+          <ul>
+            <li>Built on WordPress, Shopify, or static site generators like Jekyll</li>
+            <li>Designed with performance, accessibility, and storytelling in mind</li>
+            <li>Mobile-friendly, easy to update, and optimized for search</li>
+          </ul>
+          <a href="/services" class="button">Explore Our Services</a>
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature">
+        <div class="bento-section">
+          <h3>🛍️ E-Commerce</h3>
+          <p class="bento-description">
+            Online stores that are clear, efficient, and aligned with your values. </p>
+          <ul>
+            <li>Setup and training with Shopify</li>
+            <li>Digital product integration and fulfillment support</li>
+            <li>Accessible and culturally respectful storefronts</li>
+          </ul>
+          <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/build/e-commerce.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+      </div>
+      <div class="bento-grid bento-grid--feature image-first">
+        <div class="bento-section bento-image-wrapper">
+          <img
+            src="/assets/images/pages/build/apps.jpg"
+            alt="Community Partnerships"
+            class="bento-image" />
+        </div>
+        <div class="bento-section">
+          <h3>📱 Apps & Tools</h3>
+          <p class="bento-description">
+            Simple custom tools and web apps to support your unique needs.
+          </p>
+          <li>Lightweight, purpose-built solutions for internal or public use</li>
+          <li>Tailored to support organizational workflows</li>
+          <a href="#" class="button">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Section -->
+<section>
+  <div class="container column">
+    <div class="heading-container">
+      <h2>Why Rize?</h2>
+      <p class="subtitle">
+        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to “do it all” — and we build websites that work for real people, not just ideal scenarios.
+      </p>
+    </div>
 
+    <div class="bento-container">
+      <h3>We work best with:</h3>
+      <ul class="bento-grid bento-grid--three-col tile-grid">
+        <li class="bento-section">
+          Nonprofits & Community Groups
+        </li>
+        <li class="bento-section">
+          Artists & Cultural Leaders
+        </li>
+        <li class="bento-section">
+          Entrepreneurs
+        </li>
+        <li class="bento-section">
+          Educational Organizations
+        </li>
+        <li class="bento-section">
+          Social Enterprises
+        </li>
+        <li class="bento-section">
+          Families, Youth, & Elders
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 <!-- CTA Section -->
 {% include cta.html
