adds build hero image, bw filtering, etc

--- a/build.html
+++ b/build.html
@@ -7,6 +7,7 @@ permalink: /build/
 {% include hero.html
 title="Build"
 subtitle="Your website is often the first place people connect with your work."
+image="/assets/images/pages/build/build-hero.jpg"
 %}
 
 <!-- Section -->
@@ -106,7 +107,9 @@ subtitle="Your website is often the first place people connect with your work."
     </div>
 
     <div class="bento-container">
-      <h3>We work best with:</h3>
+      <div class="heading-container">
+        <h3>We Work Best With</h3>
+      </div>
       <ul class="bento-grid bento-grid--three-col tile-grid">
         <li class="bento-section">
           Nonprofits & Community Groups
