--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 layout: default
 title: Rize Digital
 description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
-hero-title: Together, We Rize!
-hero-subtitle: Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive.
-hero-image: /assets/images/pages/home/hero-home.jpg
-hero-cta-text: Get In Touch
-hero-cta-url: /contact
+hero-title:
+hero-subtitle:
+hero-image:
+
 ---
 <!-- Hero -->
-{% include hero.html %}
+<!-- Hero -->
+{% include hero.html
+title="Together, We Rize!"
+subtitle="Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive."
+image="/assets/images/pages/home/hero-home.jpg"
+cta_text="Get In Touch"
+cta_url:"/contact"
+%}
 
 
 <!-- Section - Our Value -->
