--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 ---
 layout: default
 title: Rize Digital
-description: Rize Digital is a technology company dedicated to uplifting communities through innovative solutions.
-hero-title:
-hero-subtitle:
-hero-image:
-
 ---
-<!-- Hero -->
+
 <!-- Hero -->
 {% include hero.html
 title="Together, We Rize!"
 subtitle="Rize Digital is a technology company dedicated to empowering community-driven organizations and helping changemakers thrive."
 image="/assets/images/pages/home/hero-home.jpg"
 cta_text="Get In Touch"
-cta_url:"/contact"
+cta_url="/contact"
 %}
 
 
