--- a/grow.html
+++ b/grow.html
@@ -5,7 +5,13 @@ hero-title: Grow
 permalink: /grow/
 ---
 <!-- Hero -->
-{% include hero.html %}
+{% include hero.html
+title="Let's grow!"
+subtitle="Lead With Confidence."
+image="/assets/images/pages/grow/grow1.jpg"
+cta_text="Get In Touch"
+cta_url="/contact"
+%}
 
 <!-- Section -->
 
