--- a/learn.html
+++ b/learn.html
@@ -1,11 +1,18 @@
 ---
 layout: default
 title: Learn
-hero-title: Learn
 permalink: /learn/
 ---
+
 <!-- Hero -->
-{% include hero.html %}
+{% include hero.html
+title="Learn With Purpose"
+subtitle="Lead With Confidence."
+image="/assets/images/pages/learn/hero-learn1.jpg"
+cta_text="Get In Touch"
+cta_url="/contact"
+%}
+
 
 <!-- Section -->
 
