rize page hero and two col

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ cta_url="/contact"
       <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p>
     </div>
     <div class="bento-container">
-      <div class="bento-grid bento-grid--feature image-first">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/navigate-digital.jpg"
@@ -108,7 +108,7 @@ cta_url="/contact"
             class="bento-image" />
         </div>
       </div>
-      <div class="bento-grid bento-grid--feature image-first">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/plan-purpose.jpg"
