--- a/rize.html
+++ b/rize.html
@@ -5,37 +5,36 @@ hero-title: Who We Are
 hero-subtitle: This is our story
 permalink: /rize/
 ---
+
 <!-- Hero -->
-{% include hero.html %}
+{% include hero.html
+title="Together, we Rize!"
+subtitle="Lead With Confidence."
+image="/assets/images/pages/rize/hero-rize.jpg"
+cta_text="Get In Touch"
+cta_url="/contact"
+%}
+
 
 <!-- Section -->
-
 <section>
-  <div class="container">
-    <div>
+  <div class="container-full-width">
+    <div class="col">
       <div class="text-container">
         <h2>Our Mission</h2>
         <p class="subtitle">We are entering a new digital era and everyone deserves a place in it. Rize Digital helps communities rise by building the skills, tools, and confidence needed to thrive online.</p>
-        <p>Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.</p>
-        <p>Together, we’re building a future where everyone can rise.</p>
-      </div>
-      <div class="">
-        <img src="/assets/images/pages/home/placeholder.jpg" alt="Rize Digital" />
+        <p class="subtitle">Our mission is to uplift underserved communities by bridging gaps in access and creating space for growth, creativity, and connection.</p>
+        <p class="subtitle">Together, we’re building a future where everyone can rise.</p>
       </div>
     </div>
-    <div>
-      <div class="">
-        <img src="/assets/images/pages/about/vision.jpg" alt="Rize Digital" />
-      </div>
-      <div class="text-container">
-        <h2>The Vision</h2>
-        <p class="subtitle">
-          We imagine a future where access to digital tools, knowledge, and opportunity is universal—where communities can thrive, connect, and lead in the digital world. Rize Digital exists to help build that future—one website, one workshop, one empowered client at a time.
-        </p>
+    <div class="col">
+      <div class="image-container">
+        <img src="/assets/images/pages/rize/vision.jpg" alt="Rize Digital" />
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- Section - Values -->
 <section>
@@ -45,7 +44,7 @@ permalink: /rize/
       <!-- <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p> -->
     </div>
     <div class="bento-container">
-      <div class="bento-grid bento-grid--feature">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/navigate-digital.jpg"
@@ -74,7 +73,7 @@ permalink: /rize/
             class="bento-image" />
         </div>
       </div>
-      <div class="bento-grid bento-grid--feature">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/home/plan-purpose.jpg"
@@ -111,9 +110,9 @@ permalink: /rize/
 <!-- Section Bio -->
 <section>
   <div class="container">
-    <div class="bento-grid bento-grid--feature">
+    <div class="bento-grid bento-grid--feature reverse">
       <div class="bento-section bento-image-wrapper">
-        <img src="/assets/images/pages/about/max-thinks.jpg" class="bento-image" />
+        <img src="/assets/images/pages/rize/max-thinks.jpg" class="bento-image" />
       </div>
       <div class="bento-section">
         <h2>Your Digital Partner</h2>
