--- a/build.html
+++ b/build.html
@@ -36,7 +36,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       </p>
     </div>
     <div class="bento-container">
-      <div class="bento-grid bento-grid--feature image-first">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/build/digital-presence.jpg"
@@ -75,7 +75,7 @@ image="/assets/images/pages/build/hero-build.jpg"
             class="bento-image" />
         </div>
       </div>
-      <div class="bento-grid bento-grid--feature image-first">
+      <div class="bento-grid bento-grid--feature reverse">
         <div class="bento-section bento-image-wrapper">
           <img
             src="/assets/images/pages/build/apps.jpg"
